kubernetes_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mutating-webhook
spec:
  selector:
    app: mutating-webhook
  ports:
  - port: 5000
